--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     implementation 'com.android.support:exifinterface:27.1.0'
 
 //    implementation 'com.wonderkiln:camerakit:0.13.1'
-    implementation 'com.wonderkiln:camerakit:0.12.0'
+    implementation 'com.wonderkiln:camerakit:0.13.0'
+//    implementation 'com.wonderkiln:camerakit:0.12.0'
 
     implementation 'org.tensorflow:tensorflow-lite:+'
     testImplementation 'junit:junit:4.12'
