--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:exifinterface:27.1.0'
 
-//    implementation 'com.wonderkiln:camerakit:0.13.1'
     implementation 'com.wonderkiln:camerakit:0.13.0'
-//    implementation 'com.wonderkiln:camerakit:0.12.0'
 
     implementation 'org.tensorflow:tensorflow-lite:+'
     testImplementation 'junit:junit:4.12'
@@ -39,10 +37,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'com.wang.avi:library:2.1.3'
-    
-    dependencies { def appCenterSdkVersion = '1.11.3' 
-    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}" 
-    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}" }
+
+    def appCenterSdkVersion = '1.11.3'
+    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
 }
 
 apply plugin: 'kotlin-android'
